--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Manuel Tristano">
     <meta name="description" content="">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/logo.svg">
     <title>The Booleaner</title>
 </head>
 <body>
@@ -13,7 +15,7 @@
    <!-- logo -->
 
     <header>
-        <img src="img/pattern.png" alt="The Booleaner">
+        <img id="logo" src="img/logo.svg" alt="The Booleaner">
     </header>
     
     <!-- titolo, immagini, articolo -->
@@ -43,7 +45,9 @@
                    <li>Lorem ipsum dolor sit annet </li>
                </ul>
            </section>
+
     <!-- tabella -->
+
            <table>
                <thead>
                    <tr>
@@ -81,6 +85,7 @@
         <footer>
 
             <h3>Potrebbero interessarti</h3>
+
             <div>Lorem ipsum dolor</div>
             <div>Lorem ipsum dolor</div>
 
