--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
     <!-- titolo, immagini, articolo -->
 
     <main>
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <h4>Scritto da The Booleaner</h4>
-        <h5>il 10/10/2010</h5>
-
+        <section id="intestazione">
+            <span id="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</span><br>
+            <span id="sottotitolo">Scritto da <span id="booleaner">The Booleaner</span></span><br>
+            <span id="data">il 10/10/2010</span>
+        </section>
+            
         <figure>
             <img src="img/tim-1.jpg" alt="Tim 1">
             <img src="img/tim-2.jpg" alt="Tim 2">
         </figure>
 
-        <h6>1st Photo: John S. and James L., Knight Foundation, by Scott Henrichsen </h6>
-        <h6>2st Photo: Wikimedia, by Paul Clarke </h6>
+        <span class="descrizione">1st Photo: John S. and James L., Knight Foundation, by Scott Henrichsen </span><br>
+        <span class="descrizione">2st Photo: Wikimedia, by Paul Clarke </span>
 
         <article>
             <section>
